--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -13,3 +13,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: ha-ha
         uses: ./.github/actions/joke-action
+        id: joke
+
+      - name: Create comment
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `${{ steps.joke.outputs.joke-output }}`
+            })
