--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -23,5 +23,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `${{ steps.joke.outputs.joke-output }}`
+              body: `${{ steps.joke.outputs.joke-output.body }}`
             })
